<resources>
    <string name="app_name">Orient</string>
    <string name="create_an_account">Create an Account</string>
    <string name="_continue">CONTINUE</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_orientation_events">Events</string>
    <string name="menu_announcements">Announcements</string>
    <string name="menu_chats">Chats</string>
    <string name="full_name">Full Name</string>
    <string name="hint_full_name">
        <font size="14">Full Name</font>
    </string>
    <string name="hint_email">
        <font size="14">Email</font>
    </string>
    <string name="hint_password">
        <font size="14">Password</font>
    </string>
    <string name="hint_confirm_password">
        <font size="14">Confirm Password</font>
    </string>
    <string name="hint_username"><font size="14">Username</font></string>
    <string name="terms_of_service">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="title_activity_student_sign_up">StudentSignUpActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hint_date_of_birth">Enter date: yyyy/mm/dd</string>
    <string name="title_activity_student_dash_board">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_institution_dashboard">MainActivity</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="log_in_using_google_account">Log in using Google Account</string>
    <string name="log_in_using_facebook_account">Log in using Facebook Account</string>
    <string name="reset_password">Reset Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="continue_as_student">Continue as Student</string>
    <string name="sun">Sun</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="title_activity_student_navigation">StudentNavigationActivity</string>
    <string name="title_activity_institution_navigation">InstitutionNavigationActivity</string>
    <string name="title_activity_student_nav">StudentNavActivity</string>
    <string name="some_university_orientation">Some University Orientation</string>
    <string name="sample_loc">Cambridge, MA</string>
    <string name="location_pin">Location Pin</string>
    <string name="search">Search</string>
    <string name="helpful_information">Helpful Information</string>
    <string name="posted_on">Posted On</string>
    <string name="sample_announcement_title">Announcement Title</string>
    <string name="sample_announcement_body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus eget lacinia est. Maecenas turpis tellus, blandit vel justo sed, imperdiet condimentum justo. Sed tempor magna sit amet consectetur sollicitudin. Maecenas ut augue dolor. Ut dapibus vestibulum ligula, in mattis ipsum pulvinar id. Nullam non urna non est viverra fermentum. Ut sem leo, porta at metus eget, malesuada consequat turpis. Phasellus in felis ultrices lectus luctus dictum. Integer tristique congue fermentum. Nunc imperdiet auctor leo, at molestie ipsum tempus a. Morbi vel turpis vestibulum, suscipit ipsum a, placerat mauris. Nullam egestas est vel rutrum vulputate. Sed sed pharetra ex.</string>
    <string name="posted_by">\@username</string>
    <string name="login_in">"Logging in…"</string>
    <string name="done">Done</string>
    <string name="invalid_password">Password must be >= 8 characters!</string>
    <string name="invalid_username">Invalid Username</string>
    <string name="reload">Reload?</string>
    <string name="format_date"> %d/%d/%d</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="no_events">No events on this date.</string>
    <string name="event_icon">Event icon</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="format_time_hour_minute">%d:%d</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        
        
        
        
        
        
        
        
        
        

        

        
        
        
        
        
        
        

        

        
        
        
        
        
        

        

        
        
        
        
        
        

        

        
        
        
        
        
        

        

        
        
        

        

        
        
        
        

        

        
        
        
        
        
        
        
        
        

        

        
        
        
        
        
        
        
        
        
        
    </string>
    <string name="none">NONE</string>
    <string name="format_day_month_date">%s, %s %d</string>
    <string name="format_time_range">%s-%s</string>
    <string name="no_physical_location">No physical location provided for this event.</string>
    <string name="no_more_details_for_this_event">No more details for this event.</string>
    <string name="orientation_events">Orientation Events</string>
    <string name="no_votes">No Votes Yet</string>
    <string name="john_doe">John Doe</string>
    <string name="messages">Messages</string>
    <string name="tagged_events">Tagged Events</string>
    <string name="connections">Connections</string>
    <string name="about">About</string>
    <string name="quit">Quit</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="options">Options</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="format_username">\@%s</string>
    <string name="format_two_names">%s %s</string>
    <string name="format_three_names">%s %s %s</string>
    <string name="Orient">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="log_in_sign_up">Log in / Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="chats">Chats</string>
    <string name="icon_animation">Icon Animation</string>
    <string name="hop_on_the_orient">Hop on the orient...</string>
    <string name="app_logo">App Logo</string>
    <string name="go_to_chats">Go To Chats</string>
    <string name="send_a_message">Send a message…</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum dolor sit amet.</string>
    <string name="lorem_ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse pharetra blandit nisi in porta. Suspendisse sed libero iaculis, posuere nunc id, dictum lectus. Integer sagittis nulla vitae nisl ornare porta. Maecenas ut sagittis erat. Quisque egestas eu lorem ac facilisis. Nulla ultricies enim vel arcu scelerisque viverra.</string>
    <string name="send">Send</string>
    <string name="attach">Attach</string>
    <string name="loading">Loading…</string>
    <string name="chat_info">Chat info</string>
    <string name="group_info">Group info</string>
    <string name="message_info">Message Info</string>
    <string name="channel_empty">No messages in this channel</string>
    <string name="no_more_messages">No more messages</string>
    <plurals name="members_online">
        <item quantity="one">%d member online</item>
        <item quantity="other">%d members online</item>
    </plurals>
    <string name="welcome_to">Welcome to</string>
    <string name="animal_forest_chat">Animal Forest Chat</string>
    <string name="ops">Oops…</string>
    <string name="no_messages">There are no recent messages!</string>
    <string name="no_members">There are no members!</string>
    <string name="you">You</string>
    <string name="chat_description">A chat group to talk to all your fuzzy friends in the animal kingdom.</string>
    <string name="no_internet">No internet connection</string>
    <string name="message_not_sent">Message not sent</string>
    <string name="web">web</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="empty_username">Empty Username</string>
    <string name="empty_name">Empty Name</string>
    <string name="invalid_name">Name Invalid</string>
    <string name="empty_email">Empty email address</string>
    <string name="select_profile_picture">select profile picture</string>
    <string name="retake">Retake</string>
    <string name="invalid_initial_password">Input valid password before confirming</string>
    <string name="passwords_dont_match">Passwords do not match</string>
    <string name="hint_middle_name">Middle name</string>
    <string name="hint_first_name">First name</string>
    <string name="hint_last_name">Last name</string>
    <string name="save">Save</string>
    <string name="contact_details">Contact details</string>
    <string name="institution_name">Institution name</string>
    <string name="country_of_residence">Country of residence</string>
    <string name="change_password">Change Password</string>
    <string name="hint_new_password">New password</string>
    <string name="hint_current_password">Current password</string>
    <string name="love">❤️</string>
    <string name="contacts">Contacts</string>
    <string name="discover_people">Discover People</string>
    <string name="discover">Discover</string>
    <string name="you_will_be_notified">You will be notified when a group is found for you</string>
    <string name="tell_more_about_yourself">Tell more about yourself?</string>
    <string name="searching">Searching</string>
    <string name="undiscoverable">You are currently undiscoverable</string>
    <string name="previous_matches">Previous matches</string>
    <string name="going_to">Going: %s</string>
    <string name="upvote">Upvote</string>
    <string name="institution_profile_picture">Institution profile picture</string>
    <string name="rate">Rate</string>
    <string name="string_rate">Current: %f (%d votes)</string>
    <string name="rate_this">Rate this</string>
    <string name="we_think_you_ll_like_these_people">We think you\'ll like these people</string>
</resources>