<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".student.login.StudentLoginActivity">

    <LinearLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/create_account"
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/arial"
            android:text="@string/create_an_account"
            android:textColor="@color/darkBlue"
            android:textSize="20sp"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_view_username"
            android:layout_width="312dp"
            android:layout_height="41dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/text_view_background_signup"
            android:fontFamily="@font/arial"
            android:gravity="center_vertical"
            android:hint="@string/hint_full_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/midBlue"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_view_email"
            android:layout_width="312dp"
            android:layout_height="41dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/text_view_background_signup"
            android:fontFamily="@font/arial"
            android:gravity="center_vertical"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/midBlue"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_view_password"
            android:layout_width="312dp"
            android:layout_height="41dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/text_view_background_signup"
            android:fontFamily="@font/arial"
            android:gravity="center_vertical"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/midBlue"
            android:textSize="14sp" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_view_confirm_password"
            android:layout_width="312dp"
            android:layout_height="41dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/text_view_background_signup"
            android:fontFamily="@font/arial"
            android:gravity="center_vertical"
            android:hint="@string/hint_confirm_password"
            android:inputType="text"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textColor="@color/darkBlue"
            android:textColorHint="@color/midBlue"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/text_view_terms_of_service"
            android:layout_width="214dp"
            android:layout_marginTop="28dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/terms_of_service"
            android:textAlignment="center"
            android:textColor="@color/darkBlue"
            android:textSize="12sp" />


    </LinearLayout>

<!--    <ImageView-->
<!--        android:id="@+id/continue_button"-->
<!--        android:layout_width="321dp"-->
<!--        android:layout_height="54dp"-->
<!--        android:layout_below="@+id/constraintLayout"-->
<!--        android:layout_alignStart="@+id/constraintLayout"-->
<!--        android:layout_alignEnd="@+id/constraintLayout"-->
<!--        android:layout_marginStart="23dp"-->
<!--        android:layout_marginTop="17dp"-->
<!--        android:layout_marginEnd="23dp"-->
<!--        android:background="@drawable/button_enabled_background"-->
<!--        android:src="@drawable/ic_baseline_arrow_forward_24" />-->

</RelativeLayout>