<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:elevation="20dp"
    android:layout_marginTop="20dp"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".student.profile.ProfileBottomFragment">

    <TextView
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="@color/darkBlue"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_regular"
        android:paddingStart="20dp"
        android:textSize="24sp"
        android:textFontWeight="800"
        android:paddingEnd="10dp"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/text_view_edit_profile"
        android:layout_marginTop="20dp"
        android:text="@string/edit_profile"
        android:drawableEnd="@drawable/ic_baseline_edit_24"
        android:layout_width="match_parent"
        android:gravity="start"
        android:drawablePadding="20dp"
        android:textColor="@color/darkBlue"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_regular"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:paddingEnd="10dp"
        android:clickable="true"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingBottom="20dp"
        android:background="@color/md_blue_grey_100" />

    <TextView
        android:id="@+id/text_view_log_out"
        android:text="@string/log_out"
        android:drawableEnd="@drawable/ic_logout_svgrepo_com"
        android:layout_width="match_parent"
        android:gravity="start"
        android:drawablePadding="20dp"
        android:textColor="@color/darkBlue"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova_regular"
        android:paddingStart="20dp"
        android:textSize="20sp"
        android:paddingEnd="10dp"
        android:clickable="true"/>

    <View
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/divider_top"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/md_blue_grey_100" />

    <TextView
        android:id="@+id/text_view_about"
        android:text="@string/about"
        android:drawableEnd="@drawable/ic_baseline_info_blue_24"
        android:layout_width="match_parent"
        android:gravity="start"
        android:drawablePadding="20dp"
        android:textColor="@color/darkBlue"
        android:textSize="20sp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:layout_height="wrap_content" />

</LinearLayout>